spacing fixed

--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,5 @@
 
 body,html{
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
